--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
 
 <div class="header">
 
+	<span class="right">
+		George Gally Portfolio
+	</span>
+
 	<div class="menu">
 
-		<img src="images/rb.gif" width="250" alt="radarboy" class="add-bottom add-top"> <br>
-			<b>George Gally Portfolio</b><br><br>
+
 			<a class="active" href="#portie">Portfolio</a>
 			<a class="active" href="lab.html">Experimental</a>
 			<a class="active" href="workshops.php">Workshops</a>
@@ -61,9 +64,8 @@
 
 	<h5 class="add-top add-bottom">
 
-		Hi, I'm George Gally, a multi-disciplined Digital Creative Director, media artist, maker and data hacker. I'm into minimalism, generative art, computer vision, data and building content. <br><br>
+		Hi, I'm George Gally, a multi-disciplined Digital Creative Director, media artist, maker and data hacker. An unusual hybrid of creative, at the convergence of art copy, code, and innovation. I'm into creating great content, minimalism, data, computer vision and driving innovation. <br><br>
 
-		I started my career as a journalist, before moving into digital then above the line advertising as a designer, Art Director and CD. Though I'm not a coder by any means, these days I'm loving code more and more as a tool for creative experession.
 
 	</h5>
 
@@ -84,35 +86,8 @@
 
 </div>
 
-<!-- FIVE STAGES -->
+
 <a id="portie"></a>
-<div class="sixteen columns add-top">
-
-
-
-		<div class="big_pic_holder add-bottom" style="padding-top: 0px; width: 100%; text-align: center; background: #000;">
-
-			<p>
-				<a href="five_stages.php">
-					<img src="images/elektroscope4.jpg">
-				</a>
-			</p>
-
-		</div>
-
-		<div class="text-holder">
-
-			<h2><a href="five_stages.php">The Five Stages</a></h2>
-
-				<div class="sub">Motion and Sound Reactive Installation.</div>
-
-			An installation deleloped at my residency at Schmiede, in Austria. An experimental AI generative feedback loop, where the computer controls the room's mood. The visuals mutate the sound and the sound in turn mutates visuals. Representing the five stages of grief, The Five Stages is sometimes calm and contemplative, other times bordering on the edge of chaos.
-
-			<a class="add-top" href="five_stages.php">More...</a>
-
-		</div>
-
-</div>
 
 
 <!-- LUCKY STRIKE -->
@@ -122,7 +97,7 @@
 
 	<div class="preview_box2">
 
-		<div class="big_pic_holder" style=" width: 100%; text-align: center; ">
+		<div class="big_pic_holder" style=" width: 100%; text-align: center; background: #999967; padding-bottom: 70px;">
 			<a href="lucky.php"><img src="images/lucky_turntable4.jpg"></a>
 		</div>
 
@@ -225,6 +200,36 @@
 	</div>
 
 </div>
+
+<!-- FIVE STAGES -->
+<div class="sixteen columns add-top">
+
+
+
+		<div class="big_pic_holder add-bottom" style="padding-top: 0px; width: 100%; text-align: center; background: #000;">
+
+			<p>
+				<a href="five_stages.php">
+					<img src="images/elektroscope4.jpg">
+				</a>
+			</p>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="five_stages.php">The Five Stages</a></h2>
+
+				<div class="sub">Motion and Sound Reactive Installation.</div>
+
+			An installation deleloped at my residency at Schmiede, in Austria. An experimental AI generative feedback loop, where the computer controls the room's mood. The visuals mutate the sound and the sound in turn mutates visuals. Representing the five stages of grief, The Five Stages is sometimes calm and contemplative, other times bordering on the edge of chaos.
+
+			<a class="add-top" href="five_stages.php">More...</a>
+
+		</div>
+
+</div>
+
 
 <!--  GIGHAM -->
 <a id="gigham"></a>
