fixed resume and header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<a class="active" href="#portie">Portfolio</a>
 			<a class="active" href="lab.html">Experimental</a>
 			<a class="active" href="workshops.php">Workshops</a>
-			<a href="resume.php">Resume</a>
+			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
 			<a href="awards.php">Awards</a>
 
 	</div>
