--- a/lab.html
+++ b/lab.html
@@ -41,12 +41,10 @@
 
 	<div class="menu">
 
-		<img src="images/rb.gif" alt="radarboy" class="half-bottom"> <br>
-			<b>George Gally Portfolio</b><br>
-			<a class="active" href="index.html#portie">Portfolio</a>
-			<a class="active" href="#portie">Experimental</a>
+			<a class="active" href="#portie">Portfolio</a>
+			<a class="active" href="lab.html">Experimental</a>
 			<a class="active" href="workshops.php">Workshops</a>
-			<a href="resume.php">Resume</a>
+			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
 			<a href="awards.php">Awards</a>
 
 	</div>
