--- a/lab.html
+++ b/lab.html
@@ -120,7 +120,7 @@
 
 		<h2><a href="http://radarboy.com/code365_player">Code365</a></h2>
 
-			<div class="sub">Sound Reactive. Motion Reactive. Generative. </div>
+			<div class="sub">Sound Reactive. Motion Reactive. Generative.</div>
 
 				I've spend the last year on a personal project called <b>#code365</b> - coding a new visualisation project each and #everyday. Pretty tough while holding down a day job and making time for my significant other. But immensly rewarding and I can definately see how I've grown as a coder and an artist. <br><br>
 
@@ -128,13 +128,12 @@
 
 				The whole system is running on top of a ported Javascript version of my award winning RBVJ software, which I used to use for VJing and running installations. <br><br>
 
-				<small>
 				Check out my <a href="http://instagram.com/radarboy3000" target="_blank">instagram for more.</a> <br><br>
-				You can also see them live <a href="http://radarboy.com/code365_player">here</a> (but warning, there's also a lot of unsorted gunk that may not work or may be ugly). <br>
-				Press SPACEBAR to go to new visualisation.</small> <br><br>
+				You can also see them live <a href="http://radarboy.com/code365_player">here</a> Press SPACEBAR to go to new visualisation (but warning, there's also a lot of unsorted gunk that may not work or may be ugly). <br>
+				<br><br>
 
 
-		</div>
+	</div>
 
 </div>
 
@@ -239,9 +238,6 @@
 </div>
 
 
-
-
-
 <div class="sixteen columns ">
 
 		<div class="preview_box2">
@@ -293,7 +289,6 @@
 	</div>
 
 
-
 <div class="sixteen columns">
 
 
@@ -322,12 +317,7 @@
 </div>
 
 
-
-
-
-
-
-	<div class="sixteen columns ">
+<div class="sixteen columns ">
 
 		<div class="preview_box2">
 
@@ -349,11 +339,7 @@
 
 		</div>
 
-	</div>
-
-
-
-
+</div>
 
 
 <div class="sixteen columns">
@@ -382,7 +368,6 @@
 </div>
 
 
-
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -405,7 +390,6 @@
 </div>
 
 
-
 <div class="sixteen columns">
 
 	<div class="preview_box2">
@@ -426,98 +410,101 @@
 
 </div>
 
+<div class="row">
 
-<div class="eight columns ">
+	<div class="eight columns ">
 
-	<div class="preview_box">
+		<div class="preview_box">
 
-		<div class="pic_holder">
-			<a href="ydetag.php"><img src="images/tolet_preview.jpg"></a>
+			<div class="pic_holder">
+				<a href="ydetag.php"><img src="images/tolet_preview.jpg"></a>
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a class="add-top" href="ydetag.php">This Space to Let</a></h2>
+			<div class="sub">Art Installation. Data. </div>
+			Collecting alalogue data from the National Gallery to determine where the most valuable spaces to exhibit are. <br><br>
+
+			Comissioned by SoftServe and the National Gallery.<br><br>
+			<a class="add-top" href="ydetag.php">View more</a>
+
 		</div>
 
 	</div>
 
-	<div class="text-holder">
+	<div class="eight columns ">
 
-		<h2><a class="add-top" href="ydetag.php">This Space to Let</a></h2>
-		<div class="sub">Art Installation. Data. </div><br><br>
-		Collecting alalogue data from the National Gallery to determine where the most valuable spaces to exhibit are. <br><br>
+		<div class="preview_box">
 
-		Comissioned by SoftServe and the National Gallery.<br><br>
-		<a class="add-top" href="ydetag.php">View more</a>
+			<div class="pic_holder">
+				<a href="reaktiv.php"><img src="images/reactiv.jpg"></a>
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="reaktiv.php">Reaktiv</a></h2>
+			Motion reactive experimental performance at the Apple store in Ginza, Tokyo.
+			<br><br>
+
+			<div class="sub">Art Installation. Performance. Reactive Video.</div>
+			Comissioned by Apple Japan.<br>
+			<a class="add-top" href="reaktiv.php">View more</a>
+
+		</div>
 
 	</div>
 
 </div>
 
 
+<div class="row">
 
-<div class="eight columns ">
+	<div class="eight columns ">
 
-	<div class="preview_box">
+		<div class="preview_box">
 
-		<div class="pic_holder">
-			<a href="reaktiv.php"><img src="images/reactiv.jpg"></a>
+			<div class="pic_holder">
+				<a href="rbvj.php"><img src="images/rbvj2.jpg"></a>
+			</div>
+
 		</div>
 
-	</div>
+		<div class="text-holder">
 
-	<div class="text-holder">
-
-		<h2><a href="reaktiv.php">Reaktiv</a></h2>
-		Motion reactive experimental performance at the Apple store in Ginza, Tokyo.
-		<br><br>
-
-		<div class="sub">Art Installation. Performance. Reactive Video.</div><br>
-		Comissioned by Apple Japan.<br><br>
-		<a class="add-top" href="reaktiv.php">View more</a>
-
-	</div>
-
-</div>
-
-
-<div class="eight columns ">
-
-	<div class="preview_box">
-
-		<div class="pic_holder">
-			<a href="rbvj.php"><img src="images/rbvj2.jpg"></a>
-		</div>
-
-	</div>
-
-	<div class="text-holder">
-
-		<h2><a href="rbvj.php">RbVj</a></h2>
-		Award-winning custom software used for VJing, installations and motion reactive dance performances.
-		<br><br>
-		<a class="add-top" href="rbvj.php">View more</a>
-
-	</div>
-
-</div>
-
-
-
-<div class="eight columns ">
-
-	<div class="preview_box">
-
-		<div class="pic_holder">
-
-			<a class="add-top" href="trailer.php"><img src="images/trailer_preview.jpg"></a>
+			<h2><a href="rbvj.php">RbVj</a></h2>
+			Award-winning custom software used for VJing, installations and motion reactive dance performances.
+			<br><br>
+			<a class="add-top" href="rbvj.php">View more</a>
 
 		</div>
 
 	</div>
 
-	<div class="text-holder">
+	<div class="eight columns ">
 
-		<h2><a href="trailer.php">Trailer</a></h2>
-		An animated gif magazine.
-		<br><br>
-		<a class="add-top" href="trailer.php">View more</a>
+		<div class="preview_box">
+
+			<div class="pic_holder">
+
+				<a class="add-top" href="trailer.php"><img src="images/trailer_preview.jpg"></a>
+
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="trailer.php">Trailer</a></h2>
+			An animated gif magazine.
+			<br><br>
+			<a class="add-top" href="trailer.php">View more</a>
+
+		</div>
 
 	</div>
 
@@ -545,115 +532,124 @@
 </div>
 
 
+<div class="row">
 
-<div class="eight columns ">
+	<div class="eight columns ">
 
-	<div class="preview_box">
+		<div class="preview_box">
 
-		<div class="pic_holder">
-			<a href="graffiti.php"><img src="images/resfest.gif" ></a>
+			<div class="pic_holder">
+				<a href="graffiti.php"><img src="images/resfest.gif" ></a>
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="graffiti.php">Graffiti Machine</a></h2>
+			<div class="sub">Concept. Hardware. Electronics. Coding</div><br>
+			Graffiti drawing console and installation for Resfest.<br><br>
+			Comissioned by Resfect and Interactive Africa.
+			<a class="add-top" href="graffiti.php">View more</a><br>
+
 		</div>
 
 	</div>
 
-	<div class="text-holder">
+	<div class="eight columns ">
 
-		<h2><a href="graffiti.php">Graffiti Machine</a></h2>
-		<div class="sub">Concept. Hardware. Electronics. Coding</div><br>
-		Graffiti drawing console and installation for Resfest.<br><br>
-		Comissioned by Resfect and Interactive Africa.
-		<a class="add-top" href="graffiti.php">View more</a><br>
+		<div class="preview_box">
+
+			<div class="pic_holder">
+				<a href="nmuf.php"><img src="images/nmuf.jpg" ></a>
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+			<h2><a href="nmuf.php">Hunger Kills</a></h2>
+			Game projection and installation for New Media Underground Festival.<br><br>
+			<a class="add-top" href="nmuf.php">View more</a>
+		</div>
 
 	</div>
 
 </div>
 
 
-<div class="eight columns ">
+<div class="row">
 
-	<div class="preview_box">
+	<div class="eight columns ">
 
-		<div class="pic_holder">
-			<a href="nmuf.php"><img src="images/nmuf.jpg" ></a>
+		<div class="preview_box">
+
+			<div class="pic_holder">
+				<a class="add-top" href="tshirtmaker.php"><img src="images/tshirtmaker2c.jpg"></a>
+			</div>
+
 		</div>
 
-	</div>
+		<div class="text-holder">
 
-	<div class="text-holder">
-		<h2><a href="nmuf.php">Hunger Kills</a></h2>
-		Game projection and installation for New Media Underground Festival.<br><br>
-		<a class="add-top" href="nmuf.php">View more</a>
-	</div>
+			<h2><a href="tshirtmaker.php">TShirtmaker</a></h2>
+			An award winning tool to design, share and print pixel t-shirts.<br><br>
+			<a class="add-top" href="tshirtmaker.php">View more</a>
 
-</div>
-
-
-
-<div class="eight columns ">
-
-	<div class="preview_box">
-
-		<div class="pic_holder">
-			<a class="add-top" href="tshirtmaker.php"><img src="images/tshirtmaker2c.jpg"></a>
 		</div>
 
-	</div>
-
-	<div class="text-holder">
-
-		<h2><a href="tshirtmaker.php">TShirtmaker</a></h2>
-		An award winning tool to design, share and print pixel t-shirts.<br><br>
-		<a class="add-top" href="tshirtmaker.php">View more</a>
 
 	</div>
 
+	<div class="eight columns ">
 
-</div>
+		<div class="preview_box">
 
+			<div class="pic_holder">
+				<a href="saville.php"><img src="images/saville2.jpg"></a>
+			</div>
 
-<div class="eight columns ">
-
-	<div class="preview_box">
-
-		<div class="pic_holder">
-			<a href="saville.php"><img src="images/saville2.jpg"></a>
 		</div>
 
-	</div>
+		<div class="text-holder">
 
-	<div class="text-holder">
+			<h2><a href="saville.php">Homage to Saville</a></h2>
+			Recreation of Peter Saville's iconic Joy Division album cover.<br><br>
+			<a class="add-top" href="saville.php">View more</a>
 
-		<h2><a href="saville.php">Homage to Saville</a></h2>
-		Recreation of Peter Saville's iconic Joy Division album cover.<br><br>
-		<a class="add-top" href="saville.php">View more</a>
+		</div>
 
 	</div>
 
 </div>
 
 
-<div class="eight columns">
+<div class="row">
 
-	<div class="preview_box">
+	<div class="eight columns">
 
-		<div class="pic_holder">
-			<a href="dust.php">
-				<img src="images/motion-dust.jpg">
-			</a>
+		<div class="preview_box">
+
+			<div class="pic_holder">
+				<a href="dust.php">
+					<img src="images/motion-dust.jpg">
+				</a>
+			</div>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="dust.php">Motion Dust</a></h2>
+			<div class="sub">Digital mirror reactive dust particle proof of concept.</div>
+			<a class="add-top" href="dust.php">View more</a>
+
 		</div>
 
 	</div>
 
-	<div class="text-holder">
-
-		<h2><a href="dust.php">Motion Dust</a></h2>
-		<div class="sub">Digital mirror reactive dust particle proof of concept.</div>
-		<a class="add-top" href="dust.php">View more</a>
-
-	</div>
+	<div class="eight columns"></div>
 
 </div>
-
 
 
 </div><!-- container -->
