--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="header">
 
-	<span class="right">
+	<span class="right" style="margin-right: 80px;">
 		George Gally Portfolio
 	</span>
 
