--- a/lab.html
+++ b/lab.html
@@ -39,9 +39,13 @@
 
 <div class="header">
 
+	<span class="right" style="margin-right: 80px;">
+		George Gally Portfolio
+	</span>
+
 	<div class="menu">
 
-			<a class="active" href="#portie">Portfolio</a>
+			<a class="active" href="index.html#portie">Portfolio</a>
 			<a class="active" href="lab.html">Experimental</a>
 			<a class="active" href="workshops.php">Workshops</a>
 			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
