added five stages to lab

--- a/art.html
+++ b/art.html
@@ -3,6 +3,7 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -34,24 +35,14 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
 </head>
-
 <body>
 
 <div class="header">
 
-	<span class="right" style="margin-right: 80px;">
-		George Gally Portfolio
+	<span style="margin-right: 80px;">
+		George Gally Art Portfolio
 	</span>
 
-	<div class="menu">
-
-			<a class="active" href="index.html#portie">Portfolio</a>
-			<a class="active" href="lab.html">Experimental</a>
-			<a class="active" href="workshops.php">Workshops</a>
-			<a href="http://radarboy.com/george/george_galanakis_resume%202017.pdf">Resume</a>
-			<a href="awards.php">Awards</a>
-
-	</div>
 
 </div>
 
@@ -59,11 +50,187 @@
 <div class="container">
 
 
-<div class="sixteen columns add-top">
 
-				<h5 class="add-top">In my free time I spend a lot of time researching and playing with technology. This is a catalogue of some of the exeriments I've been working on in real time. </h5><br><br><br>
+
+
+<!-- QUOTE -->
+<div class="sixteen columns add-top add-bottom">
+
+		<div class="quote add-bottom">
+
+		<p><i>"George is the quintessential artist... carving out new forms of experiences and brand expressions that exist at the intersection of art, culture, technology, brands and people. I love the way his brain works. He has ideals that make perfect sense in a world that will only arrive in a few years time, but George relentlessly closes that gap and is a constant reminder to me how sexy technology can, and should, be. He is the thinking man's artist we all need on our teams." </i></p>
+
+		<b>Clint Bryce - Chief Creative Officer - TBWA </b><br>
+
+		</div>
 
 </div>
+
+
+
+<!-- FIVE STAGES -->
+<div class="sixteen columns add-top">
+
+
+
+		<div class="big_pic_holder add-bottom" style="padding-top: 0px; width: 100%; text-align: center; background: #000;">
+
+			<p>
+				<a href="five_stages.php">
+					<img src="images/elektroscope4.jpg">
+				</a>
+			</p>
+
+		</div>
+
+		<div class="text-holder">
+
+			<h2><a href="five_stages.php">The Five Stages</a></h2>
+
+				<div class="sub">Motion and Sound Reactive Installation.</div>
+
+			An installation deleloped at my residency at Schmiede, in Austria. An experimental AI generative feedback loop, where the computer controls the room's mood. The visuals mutate the sound and the sound in turn mutates visuals. Representing the five stages of grief, The Five Stages is sometimes calm and contemplative, other times bordering on the edge of chaos.
+
+			<a class="add-top" href="five_stages.php">More...</a>
+
+		</div>
+
+</div>
+
+
+
+<!--  zoo -->
+<a id="zoo"></a>
+<div class="sixteen columns">
+
+	<div class="preview_box2">
+
+		<div class="big_pic_holder" style="width: 100%; text-align: center;">
+			<a href="zoo.php"><img src="images/zoo_wall2.jpg" ></a>
+		</div>
+
+	</div>
+
+	<div class="text-holder">
+
+		<h2><a href="zoo.php">Digital Zoo</a></h2>
+		<div class="sub">Art Installation. Hardware. Social.</div>
+
+
+			Instalation at the Edinburgh Festival featuring Africa's Big 5 animals as big grumpy LED tamagochis.<br>
+
+			Comissioned by the Stills Gallery and Low-Fi for the Edinburgh Arts Festival.
+
+			<a class="add-top" href="zoo.php">More...</a>
+
+		</div>
+
+</div>
+
+
+
+
+<!-- QUOTE -->
+<div class="sixteen columns add-bottom">
+
+	<div class="quote">
+
+		<p>
+			<i>"George is a very rare hybrid: equal parts tech wizard and artist. A highly conceptual thinker who combines art and code to create original experiences and artefacts.
+			He is also highly skilled at transmedia thinking: coming up with big campaign ideas that translate across multiple channels and interfaces to form a seamless narrative." </i>
+		</p>
+
+		<b>Fran Luckin - Executive Creative Director - Quirk Agency</b><br>
+
+	</div>
+
+</div>
+
+<!-- INTERNETIX -->
+<a id="internetix"></a>
+<div class="sixteen columns  add-top">
+
+	<div class="big_pic_holder" style="padding-top: 70px; width: 100%; text-align: center; background: #000;">
+
+			<p>
+				<a href="internetix.php">
+					<img src="images/internetix_peeps.jpg">
+				</a>
+
+			</p>
+
+		</div>
+
+	<div class="text-holder">
+
+		<h2><a href="internetix.php">Internetix</a></h2>
+
+		<div class="sub">Installations. Events. Data.</div>
+
+			Micro-geolocation and large-scale networked installation using motion tracking, wifi sniffing and triangulation to track conference delegates, while hacking the hacking data to find connections between them. Visualising delegate's movement, data and connections as giant artworks.
+
+			<a class="add-top" href="internetix.php">More...</a>
+
+		</div>
+
+</div>
+
+
+
+<!--  ROBOMAKER -->
+<a id="robomaker"></a>
+<div class="sixteen columns ">
+
+			<div class="preview_box2">
+
+				<div class="big_pic_holder" style="width: 100%; text-align: left; ">
+					<a href="robot.php"><img src="images/robot_maker1.jpg"></a>
+				</div>
+
+			</div>
+
+			<div class="text-holder">
+
+				<h2><a href="robot.php">Robot Maker</a></h2>
+				<div class="sub">Installation. Creative Technology. </div>
+
+
+					For Standard Chartered Bank Arts in the Park - their most important community outreach project - we created a fully automated robot builder that enables kids to create and assemble their own original papercraft robots.
+
+					<a class="add-top" href="robot.php">More...</a>
+
+			</div>
+
+</div>
+
+<!-- broadcast -->
+<a id="broadcast"></a>
+<div class="sixteen columns">
+
+	<div class="preview_box2">
+
+		<div class="big_pic_holder" style="background: #ebebeb">
+			<a href="broadcast.php"><img src="images/broadcast1.jpg"></a>
+		</div>
+
+	</div>
+
+
+	<div class="text-holder">
+
+		<h2><a href="boradcast.php">Radarboy Broadcast</a></h2>
+		<div class="sub">Website. Animation. Experimental.</div>
+
+		A multi-award winning experimetal self-promotion content portal, before content was a thing. Broadcast drew from a huge pool of self-created quirky content, to create daily programming schedules.
+
+		<a class="add-top" href="boradcast.php">More...</a>
+
+	</div>
+
+</div>
+
+
+
 
 
 <div class="sixteen columns">
@@ -101,35 +268,6 @@
 
 </div>
 
-
-<!-- FIVE STAGES -->
-<div class="sixteen columns add-top">
-
-
-
-		<div class="big_pic_holder add-bottom" style="padding-top: 0px; width: 100%; text-align: center; background: #000;">
-
-			<p>
-				<a href="five_stages.php">
-					<img src="images/elektroscope4.jpg">
-				</a>
-			</p>
-
-		</div>
-
-		<div class="text-holder">
-
-			<h2><a href="five_stages.php">The Five Stages</a></h2>
-
-				<div class="sub">Motion and Sound Reactive Installation.</div>
-
-			An installation deleloped at my residency at Schmiede, in Austria. An experimental AI generative feedback loop, where the computer controls the room's mood. The visuals mutate the sound and the sound in turn mutates visuals. Representing the five stages of grief, The Five Stages is sometimes calm and contemplative, other times bordering on the edge of chaos.
-
-			<a class="add-top" href="five_stages.php">More...</a>
-
-		</div>
-
-</div>
 
 <div class="sixteen columns">
 
@@ -685,22 +823,16 @@
 </div>
 
 
-</div><!-- container -->
+
+
+
+</div> <!-- container -->
 
 
 <!-- End Document
 ================================================== -->
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-49426919-1', 'radarboy.com');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
